--- a/index.html
+++ b/index.html
@@ -3,12 +3,23 @@
 
 <head>
     <meta charset=utf-8/>
+    <script src="d3.v6.1.1/d3.min.js"></script>
+
+    <title>ic-08</title>
 </head>
 
 
 <body>
+    <h1>D3 Part 2</h1>
 
+    <div id="vis"></div>
 
+    <h2>Acknowledgements</h2>
+        <ul>
+            <li></li>
+        </ul>
+
+    <script src="main.js"></script>
 </body>
 
 </html>
